test/types/scalar/bradc/valAsType.chpl
var x: 1;
var y: "hi";

writeln("x is: ", x);
writeln("y is: ", y);
